# gor-ck-witness

./: .gitignore  LICENSE  README.md  pyproject.toml  sigma_order.json
data/derived/: ck_area_null_perm.csv  closure_mixture_only_prediction.csv  closure_mixture_only_prediction_by_period.csv  closure_mixture_only_prediction_by_period_scores.csv  closure_phase_diagram_v2.csv  closure_phase_diagram_v2_canon_with_ie.csv  k3_train_p35_centroids.npy  k3_train_p35_holdout_assignments.csv  k4_train_p35_centroids.npy  k4_train_p35_holdout_assignments.csv  k5_train_p35_holdout_assignments.csv  period_r2_summary.csv  qc_by_period_best_strict_canon.csv
docs/: METHODS.md  REPRODUCIBILITY.md  RESULTS.md
scripts/: build_closure_phase_diagram.py  build_ie2_pblock_2to6_from_nist.py  build_pblock_ionization_csv_from_nist.py  closure_phase_add_state_and_strength.py  closure_phase_critical_charges.py  closure_state_conditioned_collapse.py  cluster_ie_shape_and_test_collapse.py  kmeans_centroid_stability.py  permutation_test_mixture_r2.py  stability_ie_clusters_yz.py  summarize_ie_clusters_yz.py  train_k3_assign_holdout.py
scripts/dev/: ck_area_from_caf.py  ck_area_null_permutation.py  closure_phase_order_parameter.py  closure_phase_sequences_and_transitions.py  closure_scaling_collapse.py  closure_universal_curve_by_period.py  curvature_vector_models.py  fit_closure_universal_curve.py
src/gor_ck_witness/: lobes.py
